some random css

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,10 +8,24 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <img src="images/icon.png" />
-    <h1>Koala Holla</h1>
-    <h2>1976 Llama Comma Drive</h2>
-    <h2>Walla Walla, WA</h2>
+    <div id="fullHeader">
+      <img src="images/icon.png" id="headerImage"/>
+      <div id="headerInfo">
+        <h1>Koala Holla</h1>
+        <h2>1976 Llama Comma Drive</h2>
+        <h2>Walla Walla, WA</h2>
+      </div>
+    </div>
+    <!-- <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> -->
     <div id="addKoala">
       <h2>Add Koala</h2>
       <form>
