--- a/server/public/index.html
+++ b/server/public/index.html
@@ -34,7 +34,7 @@
         <select name="" id="genderIn">
           <option value="Female">Female</option>
           <option value="Male">Male</option>
-        </select>
+        </select> Transferable:
         <select name="" id="transferIn">
           <option value="true">Yes</option>
           <option value="false">No</option>
